homepage and crypto page are done, search bar is working

--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,11 @@ a:hover{
     width: 100%;
 }
 .routes{
+    margin-left: 13%;
     padding: 20px;
 }
 .nav-container{
+    position: fixed;
     width: 250px;
     height: 100vh;
     margin: 0;
